--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.115.11",
+    "langchain-groq>=0.2.5",
+    "pydantic-settings>=2.8.1",
     "uvicorn>=0.34.0",
     "vectara-agentic>=0.2.4",
 ]
